# eYRC-20

./: README.md
Submissions/Task 0/: VB_2113.py
Submissions/Task 1/: t1.bag  t1_output_url.txt
VB_2113/: VB_2113.bag
pkg_eyantra/pkg_moveit_ur5_1/: .setup_assistant  package.xml
pkg_eyantra/pkg_moveit_ur5_2/: .setup_assistant  package.xml
pkg_eyantra/pkg_ros_iot_bridge/: CMakeLists.txt  package.xml
pkg_eyantra/pkg_ros_iot_bridge/config/: config_pyiot.yaml
pkg_eyantra/pkg_task2/: package.xml
pkg_eyantra/pkg_task3/: package.xml
pkg_eyantra/pkg_task4/: package.xml
pkg_eyantra/pkg_task5/: CMakeLists.txt
pkg_moveit_ur5_1/: package.xml
pkg_moveit_ur5_1/launch/: moveit_ur5_1.rviz  ur5_moveit_controller_manager.launch.xml
pkg_moveit_ur5_2/launch/: demo_gazebo.launch  gazebo.launch  planning_context.launch  ur5_moveit_controller_manager.launch.xml
pkg_ros_iot_bridge/config/: config_pyiot.yaml
pkg_ros_iot_bridge/scripts/: node_action_server_ros_iot_bridge.py
pkg_task0/: package.xml
pkg_task0/launch/: task0.launch
pkg_task0/scripts/: node_turtle_revolve.py
pkg_task1/: package.xml
pkg_task1/bag_files/: turtle_record.bag
pkg_task1/launch/: launchog  shell_webpages_launch.sh  task1.launch
pkg_task1/scripts/: node_iot_action_client_turtle.py  node_simple_action_server_turtle.py
pkg_task2/: package.xml
pkg_task2/bag_files/: t2.b.bag  t2.bag
pkg_task2/launch/: eg5new.launch  task2.launch
pkg_task2/scripts/: dsagdjs.py  node_eg4.py  node_eg5.py  node_t2_ur5_1_pick_place.py
pkg_task3/bag_files/: t3.bag
pkg_task3/launch/: task3_solution.launch
pkg_task3/scripts/: node_eg1_cartesian.py  (+5 more)
pkg_task4/: CMakeLists.txt  package.xml
pkg_task5/: package.xml
(+186 files in other folders)
